[ft #160370945] Write script that toggles specific order

--- a/UI/admin-orders.html
+++ b/UI/admin-orders.html
@@ -87,7 +87,7 @@
             <div class="order-column">3000</div>
             <div class="order-column">Yaba- 300</div>
             <div class="order-column">3300</div>
-            <div class="order-column status">Pending</div>
+            <div class="order-column status  open-order">Pending</div>
           </div>
           <div class="order-history order2">
             <div class="order-column">2</div>
@@ -99,7 +99,7 @@
             <div class="order-column">10000</div>
             <div class="order-column">Yaba- 300</div>
             <div class="order-column">10300</div>
-            <div class="order-column status">Accepted</div>
+            <div class="order-column status open-order">Accepted</div>
           </div>
           <div class="order-history">
             <div class="order-column">3</div>
@@ -111,7 +111,7 @@
             <div class="order-column">2000</div>
             <div class="order-column">Ikorodu- 500</div>
             <div class="order-column">2500</div>
-            <div class="order-column status">Declined</div>
+            <div class="order-column status open-order">Declined</div>
           </div>
           <div class="order-history order4">
             <div class="order-column">4</div>
@@ -123,7 +123,7 @@
             <div class="order-column">3000</div>
             <div class="order-column">Yaba- #300</div>
             <div class="order-column">3300</div>
-            <div class="order-column status">Completed</div>
+            <div class="order-column status open-order">Completed</div>
           </div>
         </div>
 
@@ -238,6 +238,7 @@
 
     </div>
   </div>
+  <script src="js/admin-order.js"></script>
 </body>
 
 </html>
