[gh pages] update UI header anchor-tag

--- a/UI/user-orders.html
+++ b/UI/user-orders.html
@@ -22,7 +22,7 @@
           <li class="dropdown">
             <span>&#8711;</span>
             <div class="dropdown-content">
-              <a href="">Order history</a>
+              <a href="food-items.html">Food Items</a>
               <a href="index.html">Logout</a>
             </div>
           </li>
