--- a/UI/index.html
+++ b/UI/index.html
@@ -16,7 +16,7 @@
   <div class="welcome">
     <div class="welcome-content">
       <div class="container">
-        <h1 class="page-title">Welcome to <span>FAST-FOOD-FAST</span><img src="img/logo.png" alt="logo"></h1>
+        <h1 class="page-title">Welcome to <span>FAST-FOOD-FAST<img src="img/logo.png" alt="logo"></span></h1>
 
         <div class="intro">
           <div class="delivery-girl intro-content">
@@ -41,7 +41,7 @@
       <center>
 
         <div class="auth-form">
-          <form action="" class="form-before-click">
+          <form action="food-items.html" class="form-before-click">
             <span class="close close-signup">&#10062;</span> <br>
             <legend class="form-title">Signup</legend>
             <label for="name">Name</label>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="auth-form">
-          <form action="" class="form-before-click">
+          <form action="food-items.html" class="form-before-click">
             <span class="close close-login">&#10062;</span> <br>
             <legend class="form-title">Login</legend>
             <label for="email">Email</label>
