[ft #160541207] fix auth-form modal toggle

--- a/UI/index.html
+++ b/UI/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="modal">
-      <center>
+      <div class="auth-modal-content">
 
         <div class="auth-form">
           <form action="food-items.html" class="form-before-click">
@@ -70,7 +70,7 @@
           <p>I'm new here. <span id="signup-modal">Signup</span></p>
         </div>
 
-      </center>
+      </div>
     </div>
   </div>
   <script src="js/toggle.js"></script>
