[gh pages] update nav-bar

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -18,15 +18,16 @@
       </div>
       <nav>
         <ul>
-          <li class="username">MARCUS</li>
-          <li class="dropdown">
+          <li class="username">Profile <span>5</span></li>
+          <li>Logout</li>
+          <!-- <li class="dropdown">
             <span>&#8711;</span>
             <div class="dropdown-content">
               <a href="">Order history</a>
               <a href="index.html">Logout</a>
             </div>
           </li>
-        </ul>
+        </ul> -->
       </nav>
     </div>
   </header>
@@ -37,12 +38,12 @@
     <div class="banner2">
 
     </div>
-    <div class="food-advert">
+    <!-- <div class="food-advert">
       <div class="words"></div>
       <div class="progress-bar">
         <div class="progress-color"></div>
       </div>
-    </div>
+    </div> -->
    
   </div>
   <div class="scroll-div">
