--- a/UI/user-orders.html
+++ b/UI/user-orders.html
@@ -5,210 +5,232 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fast-Food-Fast | Food Items</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" type="image/png" href="img/logo.png">
+  <title>Fast-Food-Fast | Orders</title>
+  <link rel="stylesheet" href="css/orders.css">
 </head>
 
 <body>
-  <header>
-    <div class="nav-bar">
-      <div class="logo">
-        <a href="index.html"><img src="img/logo.png" alt=""> </a>
+  <div class="dashboard">
+    <div class="dashboard-menu">
+      <div class="menu-top">
+        <div class="welcome">
+          <img src="img/logo.png" alt="logo">
+          <span>Fast Food Fast</span>
+        </div>
+        <div class="menu menu1">Pending orders</div>
+        <div class="menu menu1">Accepted orders</div>
+        <div class="menu menu2">Declined orders</div>
+        <div class="menu menu3">Completed orders</div>
       </div>
-      <nav>
-        <ul>
-          <li class="username">MARCUS</li>
-          <li class="dropdown">
-            <span>&#8711;</span>
-            <div class="dropdown-content">
-              <a href="food-items.html">Food Items</a>
-              <a href="index.html">Logout</a>
+      <div class="menu-bottom"></div>
+    </div>
+    <div class="dashboard-content">
+      <div class="dashboard-content-bg">
+        <div class="page-title">ORDER HISTORY</div>
+        <div class="orders-list">
+          <div class="order-history column-head">
+            <div class="order-column id">ID</div>
+            <div class="order-column date">Date</div>
+            <div class="order-column item">Item</div>
+            <div class="order-column qty">Qty</div>
+            <div class="order-column">Cost(&#8358;)</div>
+            <div class="order-column location">Location</div>
+            <div class="order-column">Total(&#8358;)</div>
+            <div class="order-column status-col">Status</div>
+          </div>
+          <div class="order-history order1">
+            <div class="order-column id">1</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Meet Pie</div>
+            <div class="order-column qty">3</div>
+            <div class="order-column">1000</div>
+            <div class="order-column location">Yaba</div>
+            <div class="order-column">3300</div>
+            <div class="order-column">Pending</div>
+          </div>
+          <div class="order-history order2">
+            <div class="order-column id">2</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Rice & Turkey</div>
+            <div class="order-column qty">5</div>
+            <div class="order-column">2000</div>
+            <div class="order-column location">Yaba</div>
+            <div class="order-column">10300</div>
+            <div class="order-column">Accepted</div>
+          </div>
+          <div class="order-history order3">
+            <div class="order-column id">3</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Pandoyam & Isiewu</div>
+            <div class="order-column qty">1</div>
+            <div class="order-column">2000</div>
+            <div class="order-column location">Ikorodu</div>
+            <div class="order-column">2500</div>
+            <div class="order-column">Declined</div>
+          </div>
+          <div class="order-history order4">
+              <div class="order-column id">4</div>
+              <div class="order-column date">13-09-2018</div>
+              <div class="order-column item">Sausage</div>
+              <div class="order-column qty">3</div>
+              <div class="order-column">1000</div>
+              <div class="order-column location">Yaba</div>
+              <div class="order-column">3300</div>
+              <div class="order-column">Completed</div>
             </div>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+          <div class="order-history order1">
+            <div class="order-column id">5</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Meet Pie</div>
+            <div class="order-column qty">3</div>
+            <div class="order-column">1000</div>
+            <div class="order-column location">Yaba</div>
+            <div class="order-column">3300</div>
+            <div class="order-column">Pending</div>
+          </div>
+          <div class="order-history order2">
+              <div class="order-column id">6</div>
+              <div class="order-column date">13-09-2018</div>
+              <div class="order-column item">Rice & Turkey</div>
+              <div class="order-column qty">5</div>
+              <div class="order-column">2000</div>
+              <div class="order-column location">Yaba</div>
+              <div class="order-column">10300</div>
+              <div class="order-column">Accepted</div>
+            </div>
+          <div class="order-history order3">
+            <div class="order-column id">7</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Pandoyam & Isiewu</div>
+            <div class="order-column qty">1</div>
+            <div class="order-column">2000</div>
+            <div class="order-column location">Ikorodu</div>
+            <div class="order-column">2500</div>
+            <div class="order-column">Declined</div>
+          </div>
+          <div class="order-history order4">
+            <div class="order-column id">8</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Sausage</div>
+            <div class="order-column qty">3</div>
+            <div class="order-column">1000</div>
+            <div class="order-column location">Yaba</div>
+            <div class="order-column">3300</div>
+            <div class="order-column">Completed</div>
+          </div>
+        </div>
 
-  <div class="banner">
-    <div class="banner1">
+        <!-- Mobile -->
+        <div class="order-mobile">
+          <div class="order1-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(#)</div>
+              <div class="order-column">Subtotal(&#8358;)</div>
+              <div class="order-column">Freight(#)</div>
+              <div class="order-column">Total(#)</div>
+              <div class="order-column status-col">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">1</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Meet Pie</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">3</div>
+              <div class="order-column">1000</div>
+              <div class="order-column">3000</div>
+              <div class="order-column">Yaba- 300</div>
+              <div class="order-column">3300</div>
+              <div class="order-column status">Pending</div>
+            </div>
+          </div>
+          <div class="order2-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(#)</div>
+              <div class="order-column">Subtotal(#)</div>
+              <div class="order-column">Freight(#)</div>
+              <div class="order-column">Total(#)</div>
+              <div class="order-column status-col">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">2</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Rice & Turkey</div>
+              <div class="order-column">Rice</div>
+              <div class="order-column">5</div>
+              <div class="order-column">2000</div>
+              <div class="order-column">10000</div>
+              <div class="order-column">Yaba- 300</div>
+              <div class="order-column">10300</div>
+              <div class="order-column status">Accepted</div>
+            </div>
+          </div>
+          <div class="order3-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Food Item</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Sub Total</div>
+              <div class="order-column">Freight</div>
+              <div class="order-column">Total</div>
+              <div class="order-column">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">3</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Pandoyam & Isiewu</div>
+              <div class="order-column">Local</div>
+              <div class="order-column">1</div>
+              <div class="order-column">2000</div>
+              <div class="order-column">2000</div>
+              <div class="order-column">Ikorodu- 500</div>
+              <div class="order-column">2500</div>
+              <div class="order-column status">Declined</div>
+            </div>
+          </div>
+          <div class="order4-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Food Item</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Sub Total</div>
+              <div class="order-column">Freight</div>
+              <div class="order-column">Total</div>
+              <div class="order-column">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">4</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Sausage</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">3</div>
+              <div class="order-column">1000</div>
+              <div class="order-column">3000</div>
+              <div class="order-column">Yaba- #300</div>
+              <div class="order-column">3300</div>
+              <div class="order-column status">Completed</div>
+            </div>
+          </div>
+        </div>
+        <!-- Mobile -->
 
-    </div>
-    <div class="banner2">
+      </div>
 
-    </div>
-    <div class="food-advert">
-      <div class="words"></div>
-      <div class="progress-bar">
-        <div class="progress-color"></div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="page-title order-history-title">
-    <h1>Order History</h1>
-  </div>
-  <div class="orders-list">
-    <div class="order-history column-head">
-      <div class="order-column">ID</div>
-      <div class="order-column">Date</div>
-      <div class="order-column">Food Item</div>
-      <div class="order-column">Quantity</div>
-      <div class="order-column">Unit Cost</div>
-      <div class="order-column">Sub Total</div>
-      <div class="order-column">Freight</div>
-      <div class="order-column">Total</div>
-      <div class="order-column">Status</div>
-    </div>
-    <div class="order-history order1">
-      <div class="order-column">3</div>
-      <div class="order-column">09-13-2018</div>
-      <div class="order-column">Meet Pie</div>
-      <div class="order-column">5</div>
-      <div class="order-column">1000</div>
-      <div class="order-column">5000</div>
-      <div class="order-column">Yaba - #300</div>
-      <div class="order-column">#6300</div>
-      <div class="order-column">Accepted</div>
-    </div>
-    <div class="order-history order2">
-      <div class="order-column">22</div>
-      <div class="order-column">08-13-2018</div>
-      <div class="order-column">Sausage</div>
-      <div class="order-column">2</div>
-      <div class="order-column">800</div>
-      <div class="order-column">1600</div>
-      <div class="order-column">Oshodi - #200</div>
-      <div class="order-column">#1800</div>
-      <div class="order-column">Completed</div>
-    </div>
-    <div class="order-history">
-      <div class="order-column">27</div>
-      <div class="order-column">08-13-2018</div>
-      <div class="order-column">Peperoni Pizza</div>
-      <div class="order-column">3</div>
-      <div class="order-column">2000</div>
-      <div class="order-column">6000</div>
-      <div class="order-column">Oshodi - #200</div>
-      <div class="order-column">#6200</div>
-      <div class="order-column">Completed</div>
-    </div>
-    <div class="order-history order4">
-      <div class="order-column">41</div>
-      <div class="order-column">08-13-2018</div>
-      <div class="order-column">Peperoni Pizza</div>
-      <div class="order-column">15</div>
-      <div class="order-column">2000</div>
-      <div class="order-column">6000</div>
-      <div class="order-column">Ikorodu - #500</div>
-      <div class="order-column">#6200</div>
-      <div class="order-column">Declined</div>
-    </div>
-  </div>
-
-  <!-- Mobile -->
-  <div class="order-mobile">
-    <div class="order1-mobile mobile">
-      <div class="head view">
-        <div class="order-column">ID</div>
-        <div class="order-column">Date</div>
-        <div class="order-column">Food Item</div>
-        <div class="order-column">Quantity</div>
-        <div class="order-column">Unit Cost</div>
-        <div class="order-column">Sub Total</div>
-        <div class="order-column">Freight</div>
-        <div class="order-column">Total</div>
-        <div class="order-column">Status</div>
-      </div>
-      <div class="head-content view">
-        <div class="order-column">3</div>
-        <div class="order-column">09-13-2018</div>
-        <div class="order-column">Meet Pie</div>
-        <div class="order-column">5</div>
-        <div class="order-column">1000</div>
-        <div class="order-column">5000</div>
-        <div class="order-column">Yaba - #300</div>
-        <div class="order-column">#6300</div>
-        <div class="order-column">Accepted</div>
-      </div>
-    </div>
-    <div class="order2-mobile mobile">
-      <div class="head view">
-        <div class="order-column">ID</div>
-        <div class="order-column">Date</div>
-        <div class="order-column">Food Item</div>
-        <div class="order-column">Quantity</div>
-        <div class="order-column">Unit Cost</div>
-        <div class="order-column">Sub Total</div>
-        <div class="order-column">Freight</div>
-        <div class="order-column">Total</div>
-        <div class="order-column">Status</div>
-      </div>
-      <div class="head-content view">
-        <div class="order-column">3</div>
-        <div class="order-column">09-13-2018</div>
-        <div class="order-column">Meet Pie</div>
-        <div class="order-column">5</div>
-        <div class="order-column">1000</div>
-        <div class="order-column">5000</div>
-        <div class="order-column">Yaba - #300</div>
-        <div class="order-column">#6300</div>
-        <div class="order-column">Accepted</div>
-      </div>
-    </div>
-    <div class="order3-mobile mobile">
-      <div class="head view">
-        <div class="order-column">ID</div>
-        <div class="order-column">Date</div>
-        <div class="order-column">Food Item</div>
-        <div class="order-column">Quantity</div>
-        <div class="order-column">Unit Cost</div>
-        <div class="order-column">Sub Total</div>
-        <div class="order-column">Freight</div>
-        <div class="order-column">Total</div>
-        <div class="order-column">Status</div>
-      </div>
-      <div class="head-content view">
-        <div class="order-column">3</div>
-        <div class="order-column">09-13-2018</div>
-        <div class="order-column">Meet Pie</div>
-        <div class="order-column">5</div>
-        <div class="order-column">1000</div>
-        <div class="order-column">5000</div>
-        <div class="order-column">Yaba - #300</div>
-        <div class="order-column">#6300</div>
-        <div class="order-column">Accepted</div>
-      </div>
-    </div>
-    <div class="order4-mobile mobile">
-      <div class="head view">
-        <div class="order-column">ID</div>
-        <div class="order-column">Date</div>
-        <div class="order-column">Food Item</div>
-        <div class="order-column">Quantity</div>
-        <div class="order-column">Unit Cost</div>
-        <div class="order-column">Sub Total</div>
-        <div class="order-column">Freight</div>
-        <div class="order-column">Total</div>
-        <div class="order-column">Status</div>
-      </div>
-      <div class="head-content view">
-        <div class="order-column">3</div>
-        <div class="order-column">09-13-2018</div>
-        <div class="order-column">Meet Pie</div>
-        <div class="order-column">5</div>
-        <div class="order-column">1000</div>
-        <div class="order-column">5000</div>
-        <div class="order-column">Yaba - #300</div>
-        <div class="order-column">#6300</div>
-        <div class="order-column">Accepted</div>
-      </div>
     </div>
   </div>
-  <!-- Mobile -->
-
   <div class="scroll-top">&#9652;</div>
 
   <footer class="footer">
@@ -216,7 +238,8 @@
       document.write(new Date().getFullYear());
     </script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
   </footer>
-  <script src="js/script.js"></script>
+
+  <script src="js/scroll.js"></script>
 </body>
 
 </html>
