--- a/UI/user-orders.html
+++ b/UI/user-orders.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fast-Food-Fast | Orders</title>
   <link rel="stylesheet" href="css/orders.css">
+  <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 
 <body>
@@ -14,19 +15,19 @@
     <div class="dashboard-menu">
       <div class="menu-top">
         <div class="welcome">
-          <img src="img/logo.png" alt="logo">
-          <span>Fast Food Fast</span>
+         <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
+          <span><a href="food-items.html">Fast Food Fast</a> </span>
         </div>
-        <div class="menu menu1">Pending orders</div>
-        <div class="menu menu1">Accepted orders</div>
-        <div class="menu menu2">Declined orders</div>
-        <div class="menu menu3">Completed orders</div>
+        <div class="menu menu1" id="pending">Pending orders &#10148;</div>
+        <div class="menu menu1" id="accepted">Accepted orders &#10148;</div>
+        <div class="menu menu2" id="declined">Declined orders &#10148;</div>
+        <div class="menu menu3" id="completed">Completed orders &#10148;</div>
       </div>
       <div class="menu-bottom"></div>
     </div>
     <div class="dashboard-content">
       <div class="dashboard-content-bg">
-        <div class="page-title">ORDER HISTORY</div>
+        <div class="page-title">ORDER HISTORY <span class="all-orders">8</span></div>
         <div class="orders-list">
           <div class="order-history column-head">
             <div class="order-column id">ID</div>
@@ -127,24 +128,20 @@
               <div class="order-column">ID</div>
               <div class="order-column">Date</div>
               <div class="order-column">Item</div>
-              <div class="order-column">Category</div>
               <div class="order-column">Qty</div>
-              <div class="order-column">Cost(#)</div>
-              <div class="order-column">Subtotal(&#8358;)</div>
-              <div class="order-column">Freight(#)</div>
-              <div class="order-column">Total(#)</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Location</div>
+              <div class="order-column">Total(&#8358;)</div>
               <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">1</div>
               <div class="order-column">13-09-2018</div>
               <div class="order-column">Meet Pie</div>
-              <div class="order-column">Snacks</div>
               <div class="order-column">3</div>
               <div class="order-column">1000</div>
+              <div class="order-column">Yaba</div>
               <div class="order-column">3000</div>
-              <div class="order-column">Yaba- 300</div>
-              <div class="order-column">3300</div>
               <div class="order-column status">Pending</div>
             </div>
           </div>
@@ -153,24 +150,20 @@
               <div class="order-column">ID</div>
               <div class="order-column">Date</div>
               <div class="order-column">Item</div>
-              <div class="order-column">Category</div>
               <div class="order-column">Qty</div>
-              <div class="order-column">Cost(#)</div>
-              <div class="order-column">Subtotal(#)</div>
-              <div class="order-column">Freight(#)</div>
-              <div class="order-column">Total(#)</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Location</div>
+              <div class="order-column">Total(&#8358;)</div>
               <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">2</div>
               <div class="order-column">13-09-2018</div>
               <div class="order-column">Rice & Turkey</div>
-              <div class="order-column">Rice</div>
               <div class="order-column">5</div>
               <div class="order-column">2000</div>
+              <div class="order-column">Yaba</div>
               <div class="order-column">10000</div>
-              <div class="order-column">Yaba- 300</div>
-              <div class="order-column">10300</div>
               <div class="order-column status">Accepted</div>
             </div>
           </div>
@@ -178,23 +171,20 @@
             <div class="head view">
               <div class="order-column">ID</div>
               <div class="order-column">Date</div>
-              <div class="order-column">Food Item</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Sub Total</div>
-              <div class="order-column">Freight</div>
-              <div class="order-column">Total</div>
-              <div class="order-column">Status</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Location</div>
+              <div class="order-column">Total(&#8358;)</div>
+              <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">3</div>
               <div class="order-column">13-09-2018</div>
               <div class="order-column">Pandoyam & Isiewu</div>
-              <div class="order-column">Local</div>
               <div class="order-column">1</div>
-              <div class="order-column">2000</div>
-              <div class="order-column">2000</div>
-              <div class="order-column">Ikorodu- 500</div>
+              <div class="order-column">2500</div>
+              <div class="order-column">Ikorodu</div>
               <div class="order-column">2500</div>
               <div class="order-column status">Declined</div>
             </div>
@@ -203,24 +193,21 @@
             <div class="head view">
               <div class="order-column">ID</div>
               <div class="order-column">Date</div>
-              <div class="order-column">Food Item</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Sub Total</div>
-              <div class="order-column">Freight</div>
-              <div class="order-column">Total</div>
-              <div class="order-column">Status</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Location</div>
+              <div class="order-column">Total(&#8358;)</div>
+              <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">4</div>
               <div class="order-column">13-09-2018</div>
               <div class="order-column">Sausage</div>
-              <div class="order-column">Snacks</div>
               <div class="order-column">3</div>
               <div class="order-column">1000</div>
+              <div class="order-column">Yaba</div>
               <div class="order-column">3000</div>
-              <div class="order-column">Yaba- #300</div>
-              <div class="order-column">3300</div>
               <div class="order-column status">Completed</div>
             </div>
           </div>
@@ -240,6 +227,7 @@
   </footer>
 
   <script src="js/scroll.js"></script>
+  <script src="js/status.js"></script>
 </body>
 
 </html>
