[ft #160541207] update food-items list on admin dashboard

--- a/UI/admin-food-items.html
+++ b/UI/admin-food-items.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fast-Food-Fast | Add Item</title>
-  <link rel="stylesheet" href="css/admin.css">
+  <title>Fast-Food-Fast | Orders</title>
+  <link rel="stylesheet" href="css/orders.css">
+  <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 
 <body>
@@ -14,148 +15,229 @@
     <div class="dashboard-menu">
       <div class="menu-top">
         <div class="welcome">
-          <img src="img/logo.png" alt="logo">
-          <span>Fast-Food-Fast</span>
+          <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
+          <span><a href="food-items.html">Fast Food Fast</a> </span>
         </div>
-        <div class="menu menu1">Add Food Item</div>
-        <div class="menu menu2">View All Orders</div>
-        <div class="menu menu3">View All Items</div>
+        <a href="add-food-item.html">
+          <div class="menu menu1">Add Item &#10148;</div>
+        </a>
+        <a href="#">
+          <div class="menu menu1">All Food Items &#10148;</div>
+        </a>
+        <a href="admin-orders.html">
+          <div class="menu menu2">All orders &#10148;</div>
+        </a>
       </div>
       <div class="menu-bottom"></div>
     </div>
     <div class="dashboard-content">
-      <div>
-
-        <div class="orders-list admin-orders">
+      <div class="dashboard-content-bg">
+        <div class="page-title">FOOD ITEMS LIST</div>
+        <div class="orders-list">
           <div class="order-history column-head">
-            <div class="order-column">ID</div>
-            <div class="order-column">Item Name</div>
+            <div class="order-column id">ID</div>
+            <div class="order-column date">Date</div>
+            <div class="order-column item">Item</div>
+            <div class="order-column qty">Qty</div>
+            <div class="order-column">Cost(&#8358;)</div>
+            <div class="order-column location">Description</div>
             <div class="order-column">Category</div>
-            <div class="order-column">Quantity</div>
-            <div class="order-column">Unit Cost</div>
-            <div class="order-column">Update</div>
-            <div class="order-column">Delete</div>
+            <div class="order-column status-col">Modify</div>
           </div>
           <div class="order-history order1">
-            <div class="order-column">1</div>
-            <div class="order-column">Meet Pie</div>
-            <div class="order-column">Snacks</div>
-            <div class="order-column">100</div>
+            <div class="order-column id">1</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Meet Pie</div>
+            <div class="order-column qty">50</div>
             <div class="order-column">1000</div>
-            <div class="order-column edit">&#9997;</div>
-            <div class="order-column delete">&#8855;</div>
+            <div class="order-column location">Tasty and delicious</div>
+            <div class="order-column">Snack</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
           </div>
           <div class="order-history order2">
-            <div class="order-column">2</div>
-            <div class="order-column">Sausage</div>
-            <div class="order-column">Snacks</div>
-            <div class="order-column">250</div>
-            <div class="order-column">800</div>
-            <div class="order-column edit">&#9997;</div>
-            <div class="order-column delete">&#8855;</div>
-          </div>
-          <div class="order-history">
-            <div class="order-column">3</div>
-            <div class="order-column">Peperoni Pizza</div>
-            <div class="order-column">Pizza</div>
-            <div class="order-column">48</div>
+            <div class="order-column id">2</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Rice & Turkey</div>
+            <div class="order-column qty">52</div>
             <div class="order-column">2000</div>
-            <div class="order-column edit">&#9997;</div>
-            <div class="order-column delete">&#8855;</div>
+            <div class="order-column location">Tasty and delicious.</div>
+            <div class="order-column">Rice</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
+          </div>
+          <div class="order-history order3">
+            <div class="order-column id">3</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Pandoyam & Isiewu</div>
+            <div class="order-column qty">13</div>
+            <div class="order-column">2000</div>
+            <div class="order-column location">Tasty and delicious.</div>
+            <div class="order-column">Local</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
           </div>
           <div class="order-history order4">
-            <div class="order-column">4</div>
-            <div class="order-column">Rice & Turkey</div>
-            <div class="order-column">Rice</div>
-            <div class="order-column">80</div>
+            <div class="order-column id">4</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Sausage</div>
+            <div class="order-column qty">38</div>
+            <div class="order-column">1000</div>
+            <div class="order-column location">Tasty and delicious.</div>
+            <div class="order-column">Snacks</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
+          </div>
+          <div class="order-history order1">
+            <div class="order-column id">5</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Meet Pie</div>
+            <div class="order-column qty">34</div>
+            <div class="order-column">1000</div>
+            <div class="order-column location">Tasty and delicious.</div>
+            <div class="order-column">Snacks</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
+          </div>
+          <div class="order-history order2">
+            <div class="order-column id">6</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Rice & Turkey</div>
+            <div class="order-column qty">25</div>
             <div class="order-column">2000</div>
-            <div class="order-column edit">&#9997;</div>
-            <div class="order-column delete">&#8855;</div>
+            <div class="order-column location">Tasty and delicious.</div>
+            <div class="order-column">Rice</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
+          </div>
+          <div class="order-history order3">
+            <div class="order-column id">7</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Pandoyam & Isiewu</div>
+            <div class="order-column qty">18</div>
+            <div class="order-column">2000</div>
+            <div class="order-column location">Tasty and delicious.</div>
+            <div class="order-column">Local</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
+          </div>
+          <div class="order-history order4">
+            <div class="order-column id">8</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Sausage</div>
+            <div class="order-column qty">23</div>
+            <div class="order-column">1000</div>
+            <div class="order-column location">Tasty and delicious.</div>
+            <div class="order-column">Snacks</div>
+            <div class="order-column">
+              <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+            </div>
           </div>
         </div>
 
-
         <!-- Mobile -->
-        <div class="order-mobile admin-mobile-item">
+        <div class="order-mobile">
           <div class="order1-mobile mobile">
             <div class="head view">
               <div class="order-column">ID</div>
-              <div class="order-column">Item Name</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Description</div>
               <div class="order-column">Category</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Update</div>
-              <div class="order-column">Delete</div>
+              <div class="order-column">Modify</div>
             </div>
             <div class="head-content view">
               <div class="order-column">1</div>
+              <div class="order-column">13-09-2018</div>
               <div class="order-column">Meet Pie</div>
-              <div class="order-column">Snacks</div>
-              <div class="order-column">100</div>
+              <div class="order-column">50</div>
               <div class="order-column">1000</div>
-              <div class="order-column edit">&#9997;</div>
-              <div class="order-column delete">&#8855;</div>
+              <div class="order-column">Tasty and delicious</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">
+                <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+              </div>
             </div>
           </div>
           <div class="order2-mobile mobile">
             <div class="head view">
               <div class="order-column">ID</div>
-              <div class="order-column">Item Name</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Description</div>
               <div class="order-column">Category</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Update</div>
-              <div class="order-column">Delete</div>
+              <div class="order-column">Modify</div>
             </div>
             <div class="head-content view">
               <div class="order-column">2</div>
-              <div class="order-column">2</div>
-              <div class="order-column">Sausage</div>
-              <div class="order-column">Snacks</div>
-              <div class="order-column">250</div>
-              <div class="order-column">800</div>
-              <div class="order-column edit">&#9997;</div>
-              <div class="order-column delete">&#8855;</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Rice & Turkey</div>
+              <div class="order-column">52</div>
+              <div class="order-column">2000</div>
+              <div class="order-column">Tasty and delicious.</div>
+              <div class="order-column">Rice</div>
+              <div class="order-column status">
+                <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+              </div>
             </div>
           </div>
           <div class="order3-mobile mobile">
             <div class="head view">
               <div class="order-column">ID</div>
-              <div class="order-column">Item Name</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Description</div>
               <div class="order-column">Category</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Update</div>
-              <div class="order-column">Delete</div>
+              <div class="order-column">Modify</div>
             </div>
             <div class="head-content view">
               <div class="order-column">3</div>
-              <div class="order-column">Peperoni Pizza</div>
-              <div class="order-column">Pizza</div>
-              <div class="order-column">48</div>
-              <div class="order-column">2000</div>
-              <div class="order-column edit">&#9997;</div>
-              <div class="order-column delete">&#8855;</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Pandoyam & Isiewu</div>
+              <div class="order-column">13</div>
+              <div class="order-column">2500</div>
+              <div class="order-column">Tasty and delicious.</div>
+              <div class="order-column">Local</div>
+              <div class="order-column status">
+                <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+              </div>
             </div>
           </div>
           <div class="order4-mobile mobile">
             <div class="head view">
               <div class="order-column">ID</div>
-              <div class="order-column">Item Name</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(&#8358;)</div>
+              <div class="order-column">Description</div>
               <div class="order-column">Category</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Update</div>
-              <div class="order-column">Delete</div>
+              <div class="order-column">Modify</div>
             </div>
             <div class="head-content view">
               <div class="order-column">4</div>
-              <div class="order-column">Rice & Turkey</div>
-              <div class="order-column">Rice</div>
-              <div class="order-column">80</div>
-              <div class="order-column">2000</div>
-              <div class="order-column edit">&#9997;</div>
-              <div class="order-column delete">&#8855;</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Sausage</div>
+              <div class="order-column">38</div>
+              <div class="order-column">1000</div>
+              <div class="order-column">Tasty and delicious.</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column status">
+                <a href="add-food-item.html"><span class="edit">&#9998;</span></a> &nbsp; &nbsp; &nbsp; <span class="delete">&#8855;</span>
+              </div>
             </div>
           </div>
         </div>
@@ -165,6 +247,16 @@
 
     </div>
   </div>
+  <div class="scroll-top">&#9652;</div>
+
+  <footer class="footer">
+    &copy; <script>
+      document.write(new Date().getFullYear());
+    </script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
+  </footer>
+
+  <script src="js/scroll.js"></script>
+  <script src="js/status.js"></script>
 </body>
 
 </html>
