[ft #160541207] add button and anchor to link UI templates

--- a/UI/admin-food-items.html
+++ b/UI/admin-food-items.html
@@ -247,7 +247,9 @@
 
     </div>
   </div>
+  
   <div class="scroll-top">&#9652;</div>
+  <a href="food-items.html"><div class="user-front">View menu</div></a>
 
   <footer class="footer">
     &copy; <script>
