--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -347,8 +347,9 @@
       </div>
     </div>
   </div>
-
+  
   <div class="scroll-top">&#9652;</div>
+  <a href="admin-food-items.html"><div class="user-front">Admin dashboard</div></a>
 
   <footer class="footer">
     &copy; <script>
