--- a/UI/add-food-item.html
+++ b/UI/add-food-item.html
@@ -18,9 +18,15 @@
           <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
           <span><a href="food-items.html">Fast Food Fast</a> </span>
         </div>
-        <div class="menu menu1" id="pending">Add Item &#10148;</div>
-        <div class="menu menu1" id="accepted">All Food Items &#10148;</div>
-        <div class="menu menu2" id="declined">All orders &#10148;</div>
+        <a href="#">
+          <div class="menu menu1">Add Item &#10148;</div>
+        </a>
+        <a href="admin-food-items.html">
+          <div class="menu menu1">All Food Items &#10148;</div>
+        </a>
+        <a href="admin-orders.html">
+          <div class="menu menu2">All orders &#10148;</div>
+        </a>
       </div>
       <div class="menu-bottom"></div>
     </div>
@@ -54,7 +60,9 @@
 
     </div>
   </div>
+  
   <div class="scroll-top">&#9652;</div>
+  <a href="food-items.html"><div class="user-front">View menu</div></a>
 
   <footer class="footer">
     &copy; <script>
