--- a/UI/user-orders.html
+++ b/UI/user-orders.html
@@ -218,6 +218,7 @@
 
     </div>
   </div>
+  <a href="food-items.html"><div class="user-front">View menu</div></a>
   <div class="scroll-top">&#9652;</div>
 
   <footer class="footer">
