[bg #160849114] Update UI-template orders page

--- a/UI/admin-orders.html
+++ b/UI/admin-orders.html
@@ -32,7 +32,14 @@
     </div>
     <div class="dashboard-content">
       <div class="dashboard-content-bg">
-        <div class="page-title">FOOD ORDERS LIST</div>
+        <div class="page-title all-orders">
+          <div>FOOD ORDERS LIST</div>
+          <div class="modify-icons">
+              <div class="mark-complete">&#10004;</div> Complete
+              <div class="thumbs-up">&#128077;</div> Process
+              <div class="thumbs-down">&#128078;</div> Cancel
+          </div>
+        </div>
         <div class="orders-list">
           <div class="order-history column-head">
             <div class="order-column id">ID</div>
@@ -52,10 +59,10 @@
             <div class="order-column">5000</div>
             <div class="order-column location">Sabo Yaba</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
           <div class="order-history order2">
@@ -66,10 +73,10 @@
             <div class="order-column">4000</div>
             <div class="order-column location">Andela EPIC Tower</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
           <div class="order-history order3">
@@ -80,10 +87,10 @@
             <div class="order-column">55000</div>
             <div class="order-column location">Town Planning, Ilupeju</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
           <div class="order-history order4">
@@ -94,10 +101,10 @@
             <div class="order-column">1000</div>
             <div class="order-column location">200, Ikorodu Road</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
           <div class="order-history order1">
@@ -108,10 +115,10 @@
             <div class="order-column">4000</div>
             <div class="order-column location">345, Herbart Macaulay</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
           <div class="order-history order2">
@@ -122,10 +129,10 @@
             <div class="order-column">2000</div>
             <div class="order-column location">Town Planning, Ilupeju</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
           <div class="order-history order3">
@@ -136,10 +143,10 @@
             <div class="order-column">2000</div>
             <div class="order-column location">200, Oshodi/ Apapa</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
           <div class="order-history order4">
@@ -150,10 +157,10 @@
             <div class="order-column">1000</div>
             <div class="order-column location">Town Planning, Ilupeju</div>
             <div class="order-column">08082300954</div>
-            <div class="order-column">
-              <span class="mark-complete">&#10004;</span> &nbsp;
-              <span class="thumbs-up">&#128077;</span> &nbsp;
-              <span class="thumbs-down">&#128078;</span>
+            <div class="order-column row">
+              <span class="mark-complete complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up process">&#128077;</span> &nbsp;
+              <span class="thumbs-down cancel">&#128078;</span>
             </div>
           </div>
         </div>
@@ -179,10 +186,10 @@
               <div class="order-column">5000</div>
               <div class="order-column">Sabo Yaba</div>
               <div class="order-column">08082300954</div>
-              <div class="order-column">
-                <span class="mark-complete">&#10004;</span> &nbsp;
-                <span class="thumbs-up">&#128077;</span> &nbsp;
-                <span class="thumbs-down">&#128078;</span>
+              <div class="order-column row">
+                <span class="mark-complete complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up process">&#128077;</span> &nbsp;
+                <span class="thumbs-down cancel">&#128078;</span>
               </div>
             </div>
           </div>
@@ -205,10 +212,10 @@
               <div class="order-column">4000</div>
               <div class="order-column">Andela EPIC Tower</div>
               <div class="order-column">08082300954</div>
-              <div class="order-column">
-                <span class="mark-complete">&#10004;</span> &nbsp;
-                <span class="thumbs-up">&#128077;</span> &nbsp;
-                <span class="thumbs-down">&#128078;</span>
+              <div class="order-column row">
+                <span class="mark-complete complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up process">&#128077;</span> &nbsp;
+                <span class="thumbs-down cancel">&#128078;</span>
               </div>
             </div>
           </div>
@@ -231,10 +238,10 @@
               <div class="order-column">5500</div>
               <div class="order-column">Town Planning, Ilupeju</div>
               <div class="order-column">08082300954</div>
-              <div class="order-column">
-                <span class="mark-complete">&#10004;</span> &nbsp;
-                <span class="thumbs-up">&#128077;</span> &nbsp;
-                <span class="thumbs-down">&#128078;</span>
+              <div class="order-column row">
+                <span class="mark-complete complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up process">&#128077;</span> &nbsp;
+                <span class="thumbs-down cancel">&#128078;</span>
               </div>
             </div>
           </div>
@@ -257,10 +264,10 @@
               <div class="order-column">4000</div>
               <div class="order-column">200, Ikorodu Road</div>
               <div class="order-column">08082300954</div>
-              <div class="order-column">
-                <span class="mark-complete">&#10004;</span> &nbsp;
-                <span class="thumbs-up">&#128077;</span> &nbsp;
-                <span class="thumbs-down">&#128078;</span>
+              <div class="order-column row">
+                <span class="mark-complete complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up process">&#128077;</span> &nbsp;
+                <span class="thumbs-down cancel">&#128078;</span>
               </div>
             </div>
           </div>
@@ -282,6 +289,7 @@
   </footer>
 
   <script src="js/scroll.js"></script>
+  <script src="js/modifyStatus.js"></script>
 </body>
 
 </html>
