--- a/UI/user-orders.html
+++ b/UI/user-orders.html
@@ -22,12 +22,13 @@
         <div class="menu menu1" id="accepted">Accepted orders &#10148;</div>
         <div class="menu menu2" id="declined">Declined orders &#10148;</div>
         <div class="menu menu3" id="completed">Completed orders &#10148;</div>
+        <div class="menu"><span class="all-orders">Total &#10148; 8</span></div>
       </div>
       <div class="menu-bottom"></div>
     </div>
     <div class="dashboard-content">
       <div class="dashboard-content-bg">
-        <div class="page-title">ORDER HISTORY <span class="all-orders">8</span></div>
+        <div class="page-title">ORDER HISTORY</div>
         <div class="orders-list">
           <div class="order-history column-head">
             <div class="order-column id">ID</div>
