--- a/UI/index.html
+++ b/UI/index.html
@@ -16,7 +16,7 @@
   <div class="welcome">
     <div class="welcome-content">
       <div class="container">
-        <h1 class="page-title">Welcome to <span>FAST-FOOD-FAST<img src="img/logo.png" alt="logo"></span></h1>
+        <h1 class="page-title" id="page-title">Welcome to <span>FAST-FOOD-FAST<img src="img/logo.png" alt="logo"></span></h1>
 
         <div class="intro">
           <div class="delivery-girl intro-content">
@@ -67,7 +67,7 @@
             <input type="password" id="password1" name="password" required placeholder="Input your password">
             <input type="submit" value="Submit">
           </form>
-          <p>I'm new here. <span id="signup-modal">Signup</span></p>
+          <p id="signup">I'm new here. <span id="signup-modal">Signup</span></p>
         </div>
 
       </div>
